# prompter

./: .env  .gitignore  README.md  api_tester.py  client_ui.md  generated_pr.md  instructions.md  job_listener.py  package-lock.json  package.json  pi_run.sh
.job_listener/back-end/: completed_instructions.md
.job_listener/front-end/: completed_instructions.md  instructions.md
agent/: .env.example  .prompt_agent.md.swp  README.md  agent.db  instructions_agent_api.md  pyproject.toml  run_api_server.sh  setup.cfg
agent/agent_api/: __init__.py  crud.py  database.py  main.py  migrations.py  models.py  schemas.py  settings.py
agent/agent_daemon/: __init__.py  actions.py  client.py  config.py  daemon.py
agent/agent_shared/: __init__.py  statuses.py
agent/prompt_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.vue  api.js
persistence/front-end/: completed_instructions.20260301_180923.md  completed_instructions.20260301_182736.md  completed_instructions.20260301_183151.md  completed_instructions.20260301_193059.md  completed_instructions.20260301_193201.md  completed_instructions.md
persistence/testing/: completed_instructions.20260301_194439.md
scripts/: api_tester.py  github_publish.sh  job_listener.py  llm_create_pr.sh  pi_run.sh
server/: index.js
tmp/: check_in_and_create_pr.md  cr1.md  cr2.md  cr3.md  cr4.md  cr5.md  cr6.md  hello.md  instructions.md  prompt_agent.md  prompter_cr1.md  switch_ui_back_end.md  switch_ui_back_end_2.md
(+13 files in other folders)
